# aegis-enclave

./: .dockerignore  .env.example  .gitignore  .leakguard.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  elasticmq.conf  pyproject.toml
.claude/: settings.json
.claude/agents/: aegis-stage-1-code.md  aegis-stage-2-infra.md  aegis-stage-3-docs.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cloud-apply.yml  cloud-destroy.yml  dependabot-auto-merge.yml  terraform-plan.yml
db/: init.sql
docs/: case_study_report_template.md  deployment_guide.md  design_doc.md  iam-permissions.md  iam-policy-tier1.json  iam-policy-tier2.json  migration_runbook.md  production_adoption.md  scaling_runbook.md
docs/ADR/: 0001-repo-identity-aegis-enclave.md  0002-time-budget-15h.md  0003-poc-scope-prod-hygiene.md  0004-reusability-90-10-split.md  0005-aws-target-cross-cloud-as-runbook.md  0006-vpn-three-tier-story.md  0007-single-region-multi-az.md  0008-reliability-targets-slo-rto-rpo.md  0009-db-topology-multi-az-standby.md  0010-vpn-ownership-app-vs-platform.md  0011-topology-hub-and-spoke.md  0012-migration-runbook-agent-executable.md  0013-deliverable-is-artifact-not-demo.md  0039-supply-chain-rigor.md  (+39 more)
scripts/: bootstrap-vpn-certs.sh  cloud-down.sh  cloud-evidence-verify.sh  cloud-evidence.sh  cloud-smoke.sh  cloud-up.sh  cross_region_poll_check.sh  dlq-triage.sh  dr-acceptance.sh  dr-drill.sh  tfvars-init.sh  ts_apply.sh  ts_teardown.sh
terraform/: README.md  budget.tf  main.tf  moved.tf  outputs.tf  terraform.tfvars.example  variables.tf
test-client/: README.md  smoke.sh
tests/: conftest.py  test_bootstrap.py  test_cache.py  test_db.py  test_main.py  test_metrics.py  test_primes.py  test_queue.py  test_schemas.py  test_worker.py
wireguard/: README.md  wg0.conf.template
(+29 files in other folders)
