[project]
name = "aegis-enclave"
version = "0.1.0"
description = "VPN-gated cloud microservice template — prime number generator with audit trail"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Pin-Feng (Bin) Hsu", email = "pcpunkhades@gmail.com" }]

dependencies = [
    "fastapi[standard] >=0.115",
    "uvicorn[standard] >=0.30",
    "pydantic >=2.8",
    "pydantic-settings >=2.4",
    "sqlalchemy[asyncio] >=2.0",
    "asyncpg >=0.29",
    "structlog >=24.0",
    "boto3 >=1.34",
    "redis >=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.0",
    "pytest-asyncio >=0.23",
    "pytest-cov >=5.0",
    "coverage[toml] >=7.6",
    "sympy >=1.13",
    "httpx >=0.27",
    "ruff >=0.5",
    "mypy >=1.10",
    "types-pyyaml",
    "moto[sqs] >=5.0",
    "fakeredis >=2.26",
    "boto3-stubs[sqs] >=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prime_service"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "ASYNC", "S"]
ignore = ["S101"]  # assert allowed in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N806"]
# B008 — `Depends(...)` in argument defaults IS the FastAPI dependency-injection
# pattern; ruff's generic warning doesn't apply to FastAPI route signatures.
"src/prime_service/main.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
testpaths = ["tests"]
